opam-version: "2.0"
version: "dev"

maintainer: [
  "Ilya Sergey <ilya.sergey@yale-nus.edu.sg>"
  "Yasunari Watanabe <yasunari@comp.nus.edu.sg>"
]
authors: [
  "Aleks Nanevski"
  "Ilya Sergey"
  "Germán Delbianco"
]
homepage: ["https://github.com/TyGuS/htt"]
bug-reports: ["https://github.com/TyGuS/htt"]
dev-repo: "git+https://github.com/TyGuS/htt.git"
synopsis: "Hoare Type Theory"
description: ""

build: [ make ]
install: [ make "install" ]
depends: [
  "ocaml"
  "coq" {(>= "8.9.0" & < "8.12~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.10.0" & < "1.11~") | (= "dev")}
  "coq-fcsl-pcm" {(>= "1.0.0" & < "1.3~") | (= "dev")}
]
tags: [
  "keyword:separation logic"
  "keyword:partial commutative monoid"
  "category:Computer Science/Data Types and Data Structures"
  "logpath:htt"
]
url {
  src: "git+https://github.com/TyGuS/htt.git"
}
