opam-version: "2.0"
version: "dev"

maintainer: [
  "Aleks Nanevski"
  "Alex Gryzlov"
  "Germán Andrés Delbianco"
]
authors: [
  "Aleks Nanevski"
  "Ilya Sergey"
  "Germán Andrés Delbianco"
]
homepage: ["https://github.com/imdea-software/htt"]
bug-reports: ["https://github.com/imdea-software/htt"]
dev-repo: "git+https://github.com/imdea-software/htt.git"
synopsis: "Hoare Type Theory"
description: ""

build: [ make ]
install: [ make "install" ]
depends: [
  "ocaml"
  "coq" {(>= "8.9.0" & < "8.12~") | (= "dev")}
  "coq-mathcomp-ssreflect" {(>= "1.10.0" & < "1.11~") | (= "dev")}
  "coq-fcsl-pcm" {(>= "1.0.0" & < "1.3~") | (= "dev")}
]
tags: [
  "keyword:separation logic"
  "keyword:partial commutative monoid"
  "category:Computer Science/Data Types and Data Structures"
  "logpath:htt"
]
url {
  src: "git+https://github.com/imdea-software/htt.git"
}
